Sprint 2 feature and improvements
Auth/role protection
Category/recipe/user management
Bulk operations and self‑protection
Analytics pipelines and dynamic charts
Audit trails, validation, error handling
Demo data seeding and entry points

--- a/backend/package.json
+++ b/backend/package.json
@@ -10,7 +10,8 @@
     "test:coverage": "npx nyc npx mocha test --config test/.mocharc.js",
     "start": "node server.js",
     "create-admin": "node scripts/createAdminSimple.js",
-    "test-admin": "node scripts/testAdminLogin.js"
+    "test-admin": "node scripts/testAdminLogin.js",
+    "seed-demo": "node scripts/seedDemoData.js"
   },
   "author": "Janitha",
   "license": "ISC",
